<resources>
    <string name="app_name">Liquid Economycs</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="QR_scanner">QR code scanner</string>
    <string name="Copied_to_clipboard">Copied to the clipboard</string>
    <string name="annotation_qr">To begin the verification and synchronization process, you and your partner need to exchange QR codes, for this, give your partner the opportunity to scan your QR code. In order to scan the QR code of your partner, tap the \"scan\" button.</string>
    <string name="Accept_service">Accept service</string>
    <string name="Provide_service">Provide service</string>
    <string name="pubKeyNotFound">Your partner\'s public key can not be found, perhaps in front of you people who have not provided services to the community, you want to continue to give him a favor?</string>
    <string name="Attention">Attention!</string>
    <string name="errorConnection">Error connection</string>
    <string name="onConnection">Signal server connection established</string>
    <string name="onCheckToken">Begin synchronization...</string>
    <string name="onCheckTokenError">Token verification error!</string>
    <string name="Signal_server_URL">Signal server WebSocket URL</string>
    <string name="Signal_server_Token">Signal server token</string>
    <string name="errorGetSignalServerParam">Error get signal server params</string>
    <string name="SyncFinish">Sync is finish</string>
    <string name="disconnect">Сonnection is broken</string>
    <string name="annotation_nfc">To begin the verification and synchronization procedure - attach your device to your partner’s device</string>
    <string name="error_nfc">Your device does not support NFC technology, use a QR code scanner to pair devices.</string>
    <string name="getINTERNETPermission">INTERNET access is required to display the INTERNET preview.</string>
    <string name="permission_is_not_available_INTERNET">Permission is not available. Requesting INTERNET permission.</string>
    <string name="getCAMERAPermission">Camera access is required to display the camera preview.</string>
    <string name="permission_is_not_available_CAMERA">Permission is not available. Requesting camera permission.</string>
    <string name="ErrorReceivingPartnerData">Error receiving partner data</string>
    <string name="pubKeyFound">Your partner’s public key has been found.</string>
    <string name="QR_generator">Your QR code</string>
    <string name="startScan">start scanning</string>
    <string name="stopScan">stop scanning</string>
    <string name="maxAge">Maximum age for storing public keys</string>
    <string name="maxAge_summ">The public keys of your partners on reaching this age (in days) will be automatically deleted from the local database</string>
    <string name="getNFCPermission">Access to NFC is required to pre-pair devices</string>
    <string name="permission_is_not_available_NFC">Permission is not available. NFC permission request.</string>
    <string name="getFOREGROUND_SERVICEPermission">getFOREGROUND_SERVICEPermission</string>
    <string name="permission_is_not_available_FOREGROUND_SERVICE">permission_is_not_available_FOREGROUND_SERVICE</string>
    <string name="QR_generator_consumer">QR_generator_consumer</string>
    <string name="maxSyncPubKeyInSession">Maximum number of identifiers updated at a time</string>
    <string name="maxSyncPubKeyInSession_summ">This parameter determines the maximum number of identifiers allowed to be updated when synchronizing between people within the same session</string>
</resources>
