<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/sync_header">
        <EditTextPreference
            android:defaultValue="ws://192.168.0.130:3000"
            android:key="Signal_server_URL"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/Signal_server_URL" />
        <EditTextPreference
            android:defaultValue="JKGIT87877hgkljhg8"
            android:key="Signal_server_Token"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/Signal_server_Token" />
        <EditTextPreference
            android:defaultValue="30"
            android:dialogTitle="@string/maxAge"
            android:inputType="number"
            android:key="maxAge"
            android:summary="@string/maxAge_summ"
            android:title="@string/maxAge" />
        <EditTextPreference
            android:defaultValue="100000"
            android:dialogTitle="@string/maxSyncPubKeyInSession"
            android:inputType="number"
            android:key="maxSyncPubKeyInSession"
            android:summary="@string/maxSyncPubKeyInSession_summ"
            android:title="@string/maxSyncPubKeyInSession" />
   </PreferenceCategory>



</PreferenceScreen>
